# toy-event-sourced-settings

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  noxfile.py  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: tests.yml
testing/application/: logging.py  unit_of_work.py
testing/domain/: factories.py  queries.py
tests/: projections_test.py  services_test.py  views_test.py
tests/application/: services_test.py
tests/django_back_end/: unit_of_work_test.py
tests/domain/: factories.py  operations_test.py  projections_test.py  services_test.py
tests/services/: services_test.py
toy_settings/: config.py  domain.py  events.py  logging.py  projections.py  repositories.py  services.py  settings.py  storage.py  urls.py  views.py  wsgi.py
toy_settings/application/: logging.py  services.py  unit_of_work.py
toy_settings/django_back_end/: models.py  queries.py  unit_of_work.py
toy_settings/django_back_end/migrations/: 0001_initial.py  0002_sequence_sequence_unique_index_per_key.py  0003_ensure_index_always_increases.py  0004_alter_event_key.py
toy_settings/domain/: events.py  operations.py  projections.py  queries.py  services.py
toy_settings/repositories/: filesystem.py  memory.py
toy_settings/repositories/django/: models.py  repo.py
toy_settings/services/: services.py  unit_of_work.py
toy_settings/templates/: _base.html  set_setting.html  setting_history.html  settings.html
toy_settings/units_of_work/: django.py  memory.py
