[metadata]
name = toy-event-sourced-settings
version = 0.1.0

[coverage:run]
plugins = covdefaults
omit =
  manage.py
  noxfile.py
  toy_settings/repositories/memory.py
  toy_settings/settings.py
  toy_settings/wsgi.py

[isort]
profile = black
force_single_line = true

[flake8]
exclude =
    .venv
extend-ignore = E203, W503
max-complexity = 10
max-line-length = 88

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[mypy-tests.*]
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool:pytest]
DJANGO_SETTINGS_MODULE = toy_settings.settings
